# libfuzzymatch

./: .gitignore  CMakeLists.txt  LICENSE  LibFuzzyMatchBuildTreeSettings.cmake.in  LibFuzzyMatchConfig.cmake.in  LibFuzzyMatchConfigVersion.cmake.in  README.md
benchmark/: CMakeLists.txt  README.md  build_index.cpp  query_index.cpp
benchmark/bktree/: CMakeLists.txt  build_index.cpp
benchmark/common/: CMakeLists.txt  args.h  benchmark.h  index.h  pairwise.cpp  pairwise.h  plain_index.cpp  plain_index.h  timer.h  timing.h
benchmark/datasets/musicbrainz/: .gitignore  README.md  extract-from-dbdump.py  extract-random-queries.py
benchmark/limited-levenshtein/: CMakeLists.txt  query_index.cpp
benchmark/lucene++/: .gitignore  CMakeLists.txt  build_index.cpp  config.h.in  query_index.cpp
benchmark/lucene++/CMakeModules/: FindLucene++.cmake
benchmark/pairwise-levenshtein/: CMakeLists.txt  build_index.cpp  query_index.cpp
benchmark/pairwise-levenshtein-static/: CMakeLists.txt  build_index.cpp  query_index.cpp
src/: CMakeLists.txt
src/libfuzzymatch/: CMakeLists.txt  bktree.h  levenshtein.cpp  levenshtein.h  levenshteinLimit.cpp  levenshteinLimit.h  test.cpp  util.h
